✏️Add relevant text and table

--- a/index.html
+++ b/index.html
@@ -3,12 +3,39 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>Basic Layout</title>
+        <title>Machine Learning - Home</title>
 		<link rel="stylesheet" href="style.css">
 		<script src="index.js"></script>
     </head>
     <body>
-        <h1>Basic Layout</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, deleniti!</p>
+        <h1>What is machine learning?</h1>
+        <p>
+                Machine learning is the study of computer algorithms that can improve automatically through experience and by the use of data. It is seen as a part of artificial intelligence. Machine learning algorithms build a model based on sample data, known as training data, in order to make predictions or decisions without being explicitly programmed to do so.
+
+                This came to existence after a long search for artificial intelligence. People wanted to find a easier way to program machines and find algorithms and that's why they developed machine learning.
+        <p>
+        <h2>Examples of machine learning</h2>
+        <p>Learning algorithms are used in a wide variety of applications such as</p>
+        <ul>
+            <li>Medicine</li>
+            <li>Email filtering</li>
+            <li>Speech recognition</li>
+            <li>AI chess bots</li>
+            <li>Relevant digital advertisements</li>
+        </ul>
+        <h3>How does it work?</h3>
+        <p>The computer basically identifies patterns in data and learns from each mistake it makes. There are three broad categories of machine learning shown beneath with a description of what it is.</p>
+        <table>
+            <tr>
+                <th>Type</th>
+                <th>Description</th>
+                <th>Goal</th>
+            </tr>
+            <tr>
+                <td>Supervised learning</td>
+                <td>Presented with example imput and desired output.</td>
+                <td>Learn a general rule that maps inputs to outputs</td>
+            </tr>
+        </table>
 	</body>
 </html>
