✨Update homepage text content and added favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Machine Learning - Home</title>
+        <link rel="shortcut icon" type="image/jpg" href="./images/favicon.png"/>
 		<link rel="stylesheet" href="style.css">
 		<script src="index.js"></script>
     </head>
@@ -33,8 +34,18 @@
             </tr>
             <tr>
                 <td>Supervised learning</td>
-                <td>Presented with example imput and desired output.</td>
+                <td>Presented with example input and desired output, from which it finds a rule that maps the input to its output.</td>
                 <td>Learn a general rule that maps inputs to outputs</td>
+            </tr>
+            <tr>
+                <td>Unsupervised learning</td>
+                <td>No desired outcome is given to the learning algorithm, it needs to find a structure itself</td>
+                <td>Discover hidden patterns</td>
+            </tr>
+            <tr>
+                <td>Reinforcement learning</td>
+                <td>Interacts with a dynamic environment, performing a certain goal. As it navigates its problem space, the program is provided feedback that's analogous to rewards, which it tries to maximize</td>
+                <td>Improvement in learning accuracy</td>
             </tr>
         </table>
 	</body>
