--- a/index.html
+++ b/index.html
@@ -7,46 +7,63 @@
         <link rel="shortcut icon" type="image/jpg" href="./images/favicon.png"/>
 		<link rel="stylesheet" href="style.css">
 		<script src="index.js"></script>
+        <script src="https://kit.fontawesome.com/ed4599c3e0.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <h1>What is machine learning?</h1>
-        <p>
-                Machine learning is the study of computer algorithms that can improve automatically through experience and by the use of data. It is seen as a part of artificial intelligence. Machine learning algorithms build a model based on sample data, known as training data, in order to make predictions or decisions without being explicitly programmed to do so.
+        <div class="navbar">
+            <div class="navbar-left">
+                <a href="index.html" class="btn"><i class="fas fa-home"></i> Home</a>
+                <a href="contact.html" class="btn"><i class="fas fa-ticket-alt"></i> Contact</a>
+                <a href="about.html" class="btn"><i class="fas fa-address-card"></i> About me</a>
+            </div>
+            <div class="navbar-right">
+                <input id=searchBar autocomplete="off" type="text" name="search" placeholder="Search..">
+                <button id=showSearch><i class="fas fa-search"></i></button>
+                <a href="https://github.com/dank-tagg/website-project" target="_blank" class="btn"><i class="fas fa-code"></i> Source</a>
+                <button class="btn" id="theme-switcher"><i class="fas fa-moon"></i> Switch theme</button>
+            </div>
+        </div>
+        <br>
+        <div id="body">
+            <h1>What is machine learning?</h1>
+            <p>
+                    Machine learning is the study of computer algorithms that can improve automatically through experience and by the use of data. It is seen as a part of artificial intelligence. Machine learning algorithms build a model based on sample data, known as training data, in order to make predictions or decisions without being explicitly programmed to do so.
 
-                This came to existence after a long search for artificial intelligence. People wanted to find a easier way to program machines and find algorithms and that's why they developed machine learning.
-        <p>
-        <h2>Examples of machine learning</h2>
-        <p>Learning algorithms are used in a wide variety of applications such as</p>
-        <ul>
-            <li>Medicine</li>
-            <li>Email filtering</li>
-            <li>Speech recognition</li>
-            <li>AI chess bots</li>
-            <li>Relevant digital advertisements</li>
-        </ul>
-        <h3>How does it work?</h3>
-        <p>The computer basically identifies patterns in data and learns from each mistake it makes. There are three broad categories of machine learning shown beneath with a description of what it is.</p>
-        <table>
-            <tr>
-                <th>Type</th>
-                <th>Description</th>
-                <th>Goal</th>
-            </tr>
-            <tr>
-                <td>Supervised learning</td>
-                <td>Presented with example input and desired output, from which it finds a rule that maps the input to its output.</td>
-                <td>Learn a general rule that maps inputs to outputs</td>
-            </tr>
-            <tr>
-                <td>Unsupervised learning</td>
-                <td>No desired outcome is given to the learning algorithm, it needs to find a structure itself</td>
-                <td>Discover hidden patterns</td>
-            </tr>
-            <tr>
-                <td>Reinforcement learning</td>
-                <td>Interacts with a dynamic environment, performing a certain goal. As it navigates its problem space, the program is provided feedback that's analogous to rewards, which it tries to maximize</td>
-                <td>Improvement in learning accuracy</td>
-            </tr>
-        </table>
+                    This came to existence after a long search for artificial intelligence. People wanted to find a easier way to program machines and find algorithms and that's why they developed machine learning.
+            <p>
+            <h2>Examples of machine learning</h2>
+            <p>Learning algorithms are used in a wide variety of applications such as</p>
+            <ul>
+                <li>Medicine</li>
+                <li>Email filtering</li>
+                <li>Speech recognition</li>
+                <li>AI chess bots</li>
+                <li>Relevant digital advertisements</li>
+            </ul>
+            <h3>How does it work?</h3>
+            <p>The computer basically identifies patterns in data and learns from each mistake it makes. There are three broad categories of machine learning shown beneath with a description of what it is.</p>
+            <table>
+                <tr>
+                    <th>Type</th>
+                    <th>Description</th>
+                    <th>Goal</th>
+                </tr>
+                <tr>
+                    <td>Supervised learning</td>
+                    <td>Presented with example input and desired output, from which it finds a rule that maps the input to its output.</td>
+                    <td>Learn a general rule that maps inputs to outputs</td>
+                </tr>
+                <tr>
+                    <td>Unsupervised learning</td>
+                    <td>No desired outcome is given to the learning algorithm, it needs to find a structure itself</td>
+                    <td>Discover hidden patterns</td>
+                </tr>
+                <tr>
+                    <td>Reinforcement learning</td>
+                    <td>Interacts with a dynamic environment, performing a certain goal. As it navigates its problem space, the program is provided feedback that's analogous to rewards, which it tries to maximize</td>
+                    <td>Improvement in learning accuracy</td>
+                </tr>
+            </table>
+        </div>
 	</body>
 </html>
