💄Improve UI of navigation bar

--- a/index.html
+++ b/index.html
@@ -10,28 +10,27 @@
         <script src="https://kit.fontawesome.com/ed4599c3e0.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div class="navbar">
-            <div class="navbar-left">
-                <a href="index.html" class="btn"><i class="fas fa-home"></i> Home</a>
-                <a href="contact.html" class="btn"><i class="fas fa-ticket-alt"></i> Contact</a>
-                <a href="about.html" class="btn"><i class="fas fa-address-card"></i> About me</a>
-            </div>
+        <nav class="navbar">
+            <a href="index.html"><i class="fas fa-home"></i> Home</a>
+            <a href="contact.html"><i class="fas fa-ticket-alt"></i> Contact</a>
+            <a href="about.html"><i class="fas fa-address-card"></i> About me</a>
+
             <div class="navbar-right">
                 <input id=searchBar autocomplete="off" type="text" name="search" placeholder="Search..">
-                <button id=showSearch><i class="fas fa-search"></i></button>
-                <a href="https://github.com/dank-tagg/website-project" target="_blank" class="btn"><i class="fas fa-code"></i> Source</a>
-                <button class="btn" id="theme-switcher"><i class="fas fa-moon"></i> Switch theme</button>
+                <button><i class="fas fa-search"></i></button>
+                <a href="https://github.com/dank-tagg/website-project" target="_blank"><i class="fas fa-code"></i> Source</a>
+                <button id="theme-switcher"><i class="fas fa-moon"></i> Switch theme</button>
             </div>
-        </div>
+        </nav>
         <br>
-        <div id="body">
+        <div id="content">
             <h1>What is machine learning?</h1>
             <p>
                     Machine learning is the study of computer algorithms that can improve automatically through experience and by the use of data. It is seen as a part of artificial intelligence. Machine learning algorithms build a model based on sample data, known as training data, in order to make predictions or decisions without being explicitly programmed to do so.
 
                     This came to existence after a long search for artificial intelligence. People wanted to find a easier way to program machines and find algorithms and that's why they developed machine learning.
             <p>
-            <h2>Examples of machine learning</h2>
+            <h3>Examples of machine learning</h3>
             <p>Learning algorithms are used in a wide variety of applications such as</p>
             <ul>
                 <li>Medicine</li>
@@ -64,6 +63,8 @@
                     <td>Improvement in learning accuracy</td>
                 </tr>
             </table>
+            <h3>Video</h3>
+            <iframe width="420" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
         </div>
 	</body>
 </html>
