--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Machine Learning - Home</title>
-        <link rel="shortcut icon" type="image/jpg" href="./images/favicon.png"/>
+        <link rel="shortcut icon" type="image/jpg" href="./images/favicon.png">
 		<link rel="stylesheet" href="style.css">
 		<script src="index.js"></script>
         <script src="https://kit.fontawesome.com/ed4599c3e0.js" crossorigin="anonymous"></script>
