--- a/info.html
+++ b/info.html
@@ -37,6 +37,7 @@
                 <li>AI chess bots</li>
                 <li>Relevant digital advertisements</li>
             </ul>
+            <img src="https://i.dailymail.co.uk/i/pix/2017/12/22/02/4782A77100000578-0-image-a-21_1513908905228.jpg">
             <h3>How does it work?</h3>
             <p>The computer basically identifies patterns in data and learns from each mistake it makes. There are three broad categories of machine learning shown beneath with a description of what it is.</p>
             <table>
