--- a/info.html
+++ b/info.html
@@ -63,7 +63,7 @@
                 </tr>
             </table>
             <h3>Video</h3>
-            <iframe width="420" height="315" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+            <iframe width="420" height="315" src="https://www.youtube.com/embed/f_uwKZIAeM0" frameborder="0"></iframe>
         </div>
     </body>
 </html>
