🔁Change image source to local files

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
             Making this website was a truly awesome experience. Not only have we learned what we needed to, we also learned about how machine learning works.
             </p>
             <p style="text-align: center;">
-                <img src="https://www.madmagazine.com/sites/default/files/MAD-Magazine-Rob-Evil-Robot-Temp-Boss-Son.jpg" style="width: 70%;">
+                <img src="images/robot.jpg" style="width: 70%;">
             </p>
         </div>
     </body>
