--- a/info.html
+++ b/info.html
@@ -28,7 +28,7 @@
 
                     This came to existence after a long search for artificial intelligence. People wanted to find a easier way to program machines and find algorithms and that's why they developed machine learning.
             <p>
-            <img src="https://i.dailymail.co.uk/i/pix/2017/12/22/02/4782A77100000578-0-image-a-21_1513908905228.jpg">
+            <img src="images/chessai.jpg">
             <h3>Examples of machine learning</h3>
             <p>Learning algorithms are used in a wide variety of applications such as</p>
             <ul>
