🛠️Add navbar shortcut to info.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <body>
         <nav class="navbar">
             <a href="index.html"><i class="fas fa-home"></i> Home</a>
+            <a href="info.html"><i class="fa-solid fa-info"></i> Info</a>
             <a href="contact.html"><i class="fas fa-ticket-alt"></i> Contact</a>
             <a href="about.html"><i class="fas fa-address-card"></i> About me</a>
 
@@ -22,7 +23,7 @@
             </div>
         </nav>
         <div class="header">
-            
+
             <h1>Machine Learning, <br>a subfield of AI</h1>
             <h2>Using algorithms and AI's to make our life easier.</h2>
             <h3><em>Invented in 1959 by Arthur Samuel</em></h3>
