--- a/info.html
+++ b/info.html
@@ -12,7 +12,7 @@
     <body>
         <nav class="navbar">
             <a href="index.html"><i class="fas fa-home"></i> Home</a>
-            <a href="info.html"><i class="fa-solid fa-info"></i> Info</a>
+            <a href="info.html"><i class="fas fa-info"></i> Info</a>
             <a href="contact.html"><i class="fas fa-ticket-alt"></i> Contact</a>
             <a href="about.html"><i class="fas fa-address-card"></i> About me</a>
             <div class="navbar-right">
