--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Machine Learning - Home</title>
         <link rel="shortcut icon" type="image/jpg" href="./images/favicon.png">
         <link rel="stylesheet" href="style.css">
