📝Wrote some more text

--- a/info.html
+++ b/info.html
@@ -38,9 +38,13 @@
                 <li>Relevant digital advertisements</li>
             </ul>
             <h3>How does it work?</h3>
-            <p>The computer basically identifies patterns in data and learns from each mistake it makes. There are three broad categories of machine learning shown beneath with a description of what it is.</p>
+            <p>
+                The computer basically identifies patterns in data and learns from each mistake it makes. There are <u>three broad categories</u> of machine learning shown beneath with a description of what it is. <br><br><strong>Supervised learning:</strong> The machine is provided with a lot of information about a certain case and the case outcome is also provided. The outcome is the labeled data and the rest of the information is used as input. For example, a machine is shown 100 cases when the customers defaulted on a loan and 100 cases where customers didn't default. Things like age and salary are the input, and default/ not-default is the labeled data. With this information the machine can learn the relationships between the outcome default and the input information.<br><br>
+                <strong>Unsupervised learning:</strong> The computer must learn without the help from the user. The machine identifies patterns in the data that is not obvious for the human eye. It recognises patterns and is quite useful to help us make decisions. For example: if we did not know which customers defaulted on loans, but gave the borrower information to the machine, it would be able to see patterns among the borrowers and group them. Unsuperivised learning is used for the detections like uncovering fraudulent transactions or payments.<br><br><strong>Reinforcement learning:</strong>
+                This is the closest to humans when it comes to the way of learning. The algorithm continually learns from its environment by interacting with it. For each action it gets a positive or a negative reward. For example bankloans. A reinforcement learning algorithm looks at the information and classifies the custumer as a high-risk customer. When the person defaults, the algorithm gets a positive reward. If the person doesn't default, it gets a negative reward. The rewards help the agent understand the environment and the problem better and they can now learn for future cases.
+            </p>
             <table>
-                <caption style="text-align: left;"><strong>Three broad types of machine learning</strong></caption>
+                <caption style="text-align: left;"><strong>Summarized</strong></caption>
                 <thead>
                     <tr>
                         <th>Type</th>
@@ -66,6 +70,11 @@
                     </tr>
                 </tbody>
             </table>
+            <h3>Machine learning versus traditional programming</h3>
+            <p>
+                Traditional programming takes out the data, uses the rules as input and applies the rules to the data to get the answers. Whereas in Machine Learning (<strong>ML</strong>) the data and the answers are used for input and the new learned rules come as output. It teaches the computer new rules in a complex space, a space harder to comprehend by humans. For example, a traditional computer program for activity recognition for someone's speed (<strong>data</strong>) and definiton of activity (<strong>rules</strong>). The problem: different people walk with variable speeds depending upon, for example, age. With ML lots of example activities with their labels will be given and it will then learn the rules to predict future activity.
+                Traditional programming is manually done and if something occurs, like an error, humans would have to fix it. Machine learning on the other hand learns from its own mistakes and can fix those errors without the need for human assistance.
+            </p>
             <h3>Video</h3>
             <iframe width="420" height="315" src="https://www.youtube.com/embed/f_uwKZIAeM0" frameborder="0"></iframe>
         </div>
