🕹️Restore switch theme button

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
             <div class="navbar-right">
                 <input id=searchBar autocomplete="off" type="text" name="search" placeholder="Search..">
                 <button><i class="fas fa-search"></i></button>
-                <a href="https://github.com/dank-tagg/website-project" target="_blank"><i class="fas fa-code"></i> Source</a>
+                <button id="switch-theme"><i class="fas fa-moon"></i> Switch theme</button>
             </div>
         </nav>
         <div class="contact">
